@@ -1,6 +1,7 @@
 package backend.dev.review.service;
 
 import backend.dev.facility.entity.FacilityDetails;
+import backend.dev.facility.repository.FacilityDetailsRepository;
 import backend.dev.review.dto.ReviewDTO;
 import backend.dev.review.entity.Review;
 import backend.dev.review.repository.ReviewRepository;
@@ -14,7 +15,7 @@ import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 
@@ -34,7 +35,7 @@ class ReviewServiceTest {
     private TagRepository tagRepository;
 
     @Mock
-    private backend.dev.facility.repository.FacilityDetailsRepository facilityDetailsRepository;
+    private FacilityDetailsRepository facilityDetailsRepository;
 
     private FacilityDetails testFacility;
     private Review testReview;
@@ -45,13 +46,13 @@ class ReviewServiceTest {
 
         testFacility = new FacilityDetails();
         testFacility.changeFacilityDetailsId("test-facility-id");
-        testFacility.changeFacilityName("잠실야구장");
+        testFacility.changeFacilityName("Test Facility");
 
         testReview = new Review();
         testReview.setReviewId(1L);
         testReview.setFacility(testFacility);
-        testReview.setReview_content("Test Review");
-        testReview.setReview_rating(4.5);
+        testReview.setReview_content("Original Review");
+        testReview.setReview_rating(4.0);
         testReview.setReviewLikes(10);
         testReview.setCreatedAt(LocalDateTime.now());
         testReview.setUpdatedAt(LocalDateTime.now());
@@ -94,8 +95,11 @@ class ReviewServiceTest {
 
     @Test
     void testGetReviewsByFacility() {
+        testReview.setReview_content("Test Review");
+        testReview.setReview_rating(4.5);
+
         when(reviewRepository.findByFacility_FacilityIdOrderByCreatedAtDesc("test-facility-id"))
-                .thenReturn(Arrays.asList(testReview));
+                .thenReturn(List.of(testReview));
 
         when(tagRepository.findByReviewReviewId(1L)).thenReturn(
                 List.of(
@@ -109,9 +113,7 @@ class ReviewServiceTest {
         assertThat(reviews).hasSize(1);
         assertThat(reviews.get(0).getContent()).isEqualTo("Test Review");
         assertThat(reviews.get(0).getRating()).isEqualTo(4.5);
-        assertThat(reviews.get(0).getTags()).containsExactly(TagValue.CLEAN, TagValue.GOOD_LOCATION);
-        assertThat(reviews.get(0).getContent()).isNotNull();
-        assertThat(reviews.get(0).getUpdatedAt()).isNotNull();
+        assertThat(reviews.get(0).getTags()).containsExactlyInAnyOrder(TagValue.CLEAN, TagValue.GOOD_LOCATION);
 
         verify(reviewRepository, times(1)).findByFacility_FacilityIdOrderByCreatedAtDesc("test-facility-id");
     }
@@ -172,5 +174,44 @@ class ReviewServiceTest {
 
         verify(tagRepository, times(1)).deleteAll(List.of(tag1, tag2));
         verify(reviewRepository, times(1)).delete(review);
+    }
+
+    @Test
+    void testUpdateReviewWithTags() {
+        ReviewDTO updatedDTO = new ReviewDTO();
+        updatedDTO.setContent("Updated Review");
+        updatedDTO.setRating(5.0);
+        updatedDTO.setTags(List.of(TagValue.SPACIOUS, TagValue.FREE));
+
+        when(reviewRepository.findById(1L)).thenReturn(Optional.of(testReview));
+        when(reviewRepository.save(any(Review.class))).thenAnswer(invocation -> invocation.getArgument(0));
+
+        List<Tag> existingTags = new ArrayList<>(List.of(
+                new Tag(testReview, TagValue.CLEAN),
+                new Tag(testReview, TagValue.GOOD_LOCATION)
+        ));
+        when(tagRepository.findByReviewReviewId(1L)).thenReturn(existingTags);
+
+        doAnswer(invocation -> {
+            existingTags.clear();
+            return null;
+        }).when(tagRepository).deleteAll(existingTags);
+
+        doAnswer(invocation -> {
+            List<Tag> tagsToSave = invocation.getArgument(0);
+            existingTags.addAll(tagsToSave);
+            return tagsToSave;
+        }).when(tagRepository).saveAll(anyList());
+
+        // Act
+        ReviewDTO result = reviewService.updateReview(1L, updatedDTO);
+
+        // Assert
+        assertThat(result.getContent()).isEqualTo("Updated Review");
+        assertThat(result.getRating()).isEqualTo(5.0);
+        assertThat(result.getTags()).containsExactlyInAnyOrder(TagValue.SPACIOUS, TagValue.FREE);
+
+        verify(tagRepository, times(1)).deleteAll(existingTags);
+        verify(tagRepository, times(1)).saveAll(anyList());
     }
 }
